# sand-simulation

./: .gitignore  LICENSE
app/src/: main.rs
application/: Cargo.toml
application/src/: file_explorer.rs  lib.rs  main.rs  performance_monitor.rs  pulse.rs  renderer.rs  tool.rs
application/src/renderer/: canvas.rs  single_color_renderer.rs  textured_renderer.rs
simulation/: Cargo.toml
simulation/benches/: large_world.rs  medium_world.rs  small_world.rs
simulation/src/: cell.rs  chunk_view.rs  double_buffer.rs  grid.rs  lib.rs  world_gen.rs  world_view.rs
