[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.14"
rayon = "1.12.0"
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
noise = "0.9.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "small_world"
harness = false

[[bench]]
name = "medium_world"
harness = false

[[bench]]
name = "large_world"
harness = false